--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,7 +32,8 @@
     "express": "5.2.1",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
-    "pino-pretty": "^13.1.3"
+    "pino-pretty": "^13.1.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
