--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec \"tsx src/index.ts\"",
-    "start": "node dist/index.js"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "start:prod": "node dist/index.js"
   },
   "keywords": [
     "api",
