--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,7 +5,10 @@
         "moduleResolution": "Node",
         "strict": true,
         "esModuleInterop": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "rootDir": "src",
+        "outDir": "dist",
+        "sourceMap": true
     },
     "include": [
         "src"
