--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "5.2.1",
@@ -38,6 +39,7 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
