feat: Add Prisma to API with User, Video, Task models

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "morpho-shorts-factory",
   "private": true,
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "dev:api": "pnpm --filter api dev",
