--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,11 @@
     "dev": "nodemon --watch src --ext ts --exec \"tsx src/index.ts\"",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "start:prod": "node dist/index.js"
+    "start:prod": "node dist/index.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio"
   },
   "keywords": [
     "api",
@@ -29,6 +33,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "@prisma/client": "^7.2.0",
     "amqplib": "^0.10.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -45,6 +50,7 @@
     "@types/node": "^25.0.3",
     "@types/pino-http": "^6.1.0",
     "nodemon": "^3.1.11",
+    "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.4.0"
