fix: Generate Prisma Client before TypeScript build

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -8,9 +8,15 @@ RUN corepack enable && pnpm install --frozen-lockfile
 
 COPY apps/api/src ./src
 COPY apps/api/tsconfig.json ./tsconfig.json
+COPY apps/api/prisma ./prisma
+COPY apps/api/prisma.config.ts ./prisma.config.ts
+
+# Generate Prisma Client
+RUN pnpm db:generate
 
 RUN pnpm build
 
 EXPOSE 5001
 
-CMD ["node", "dist/index.js"]
+# Run migrations and start
+CMD pnpm exec prisma migrate deploy && node dist/index.js
