--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,9 @@
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "check": "node scripts/pre-deploy-check.js",
+    "predeploy": "pnpm check"
   },
   "keywords": [
     "api",
