feat(auth): Add JWT authentication system with login, register, and protected routes
- Add AuthService with user registration and login
- Implement JWT token generation and verification (7-day expiration)
- Add bcrypt password hashing (10 salt rounds)
- Create auth routes: /register, /login, /me
- Add authenticate middleware for route protection
- Update env config to require JWT_SECRET (min 32 chars)
- Add Postman collection with auto-token management
- Include comprehensive documentation (AUTH_GUIDE.md, POSTMAN_SETUP.md)
- Add validation helper for Zod schemas
- Password requirements: min 8 characters
- Track lastLoginAt on successful login

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,7 +18,13 @@ RABBIT_URL=amqp://localhost:5672
 # CORS Origins (comma-separated)
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# Optional: Database, Session, API Keys
-# DATABASE_URL=postgresql://user:pass@localhost:5432/db
+# Database Configuration (Required for auth and data persistence)
+DATABASE_URL=postgresql://user:pass@localhost:5432/morpho_shorts
+
+# JWT Authentication (Required - must be at least 32 characters)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your-super-secret-jwt-key-min-32-chars-long-replace-this
+
+# Optional: Session, API Keys
 # SESSION_SECRET=your-secret-key
 # API_KEY=your-api-key
