--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,9 +39,11 @@
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "amqplib": "^0.10.9",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
@@ -49,8 +51,10 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pino-http": "^6.1.0",
     "nodemon": "^3.1.11",
