Add documentation for Football Highlights Algorithm and data integration
- Created FOOTBALL_QUICK_START.md for quick setup and usage instructions.
- Added FOOTBALL_SUMMARY.md detailing implemented features and API endpoints.
- Introduced REAL_FOOTBALL_DATA.md for integrating real match data from APIs.
- Developed WEB_SCRAPING_FOOTBALL.md to guide scraping current match data from FotMob.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -28,3 +28,35 @@ JWT_SECRET=your-super-secret-jwt-key-min-32-chars-long-replace-this
 # Optional: Session, API Keys
 # SESSION_SECRET=your-secret-key
 # API_KEY=your-api-key
+
+# ==============================================================================
+# Storage Configuration
+# ==============================================================================
+
+# Storage Driver: 'local' for filesystem or 'gcs' for Google Cloud Storage
+STORAGE_DRIVER=local
+
+# Google Cloud Storage (only required if STORAGE_DRIVER=gcs)
+# GCS_PROJECT_ID=your-gcs-project-id
+# GCS_BUCKET_NAME=morpho-shorts-factory
+# 
+# Optional: Path to service account JSON key file
+# If not provided, uses gcloud Application Default Credentials (gcloud auth application-default login)
+# GCS_CREDENTIALS_PATH=./gcs-credentials.json
+
+# ==============================================================================
+# External API Keys (Optional - for video/data scraping)
+# ==============================================================================
+
+# TikTok API (RapidAPI)
+# Get key from: https://rapidapi.com/tikwm-tikwm-default/api/tiktok-scraper7
+# RAPIDAPI_KEY=your-rapidapi-key
+
+# YouTube Data API v3
+# Get key from: https://console.cloud.google.com/apis/credentials
+# YOUTUBE_API_KEY=your-youtube-api-key
+
+# Football Data API (API-Football)
+# Get key from: https://www.api-football.com/
+# Free tier: 100 requests/day
+# FOOTBALL_API_KEY=your-api-football-key
