--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,8 +37,12 @@
   "license": "MIT",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
+    "@google-cloud/storage": "^7.18.0",
     "@prisma/client": "^6.19.1",
+    "@tobyg74/tiktok-api-dl": "^1.3.7",
     "amqplib": "^0.10.9",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -47,6 +51,7 @@
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
+    "ytdl-core": "^4.11.5",
     "zod": "^4.2.1"
   },
   "devDependencies": {
