refactor: remove football-data and football-scraper routes - consolidated to single /football endpoint; restore complete Postman collection

--- a/.env.example
+++ b/.env.example
@@ -3,22 +3,33 @@
 
 # Core API
 PORT=5001
-RABBIT_URL=amqp://localhost:5672
-CORS_ORIGINS=http://localhost:3000
+NODE_ENV=development
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Database (PostgreSQL)
 DATABASE_URL=postgresql://user:pass@localhost:5432/morpho
 
-# Storage
+# Messaging (RabbitMQ)
+RABBIT_URL=amqp://localhost:5672
+
+# Authentication & Security
+JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
+SESSION_SECRET=your-session-secret-minimum-32-characters-long
+API_KEY=optional-api-key-for-external-access
+
+# Storage Configuration
 STORAGE_DRIVER=local
-S3_BUCKET=
-S3_ACCESS_KEY=
-S3_SECRET_KEY=
-S3_REGION=
+# For Google Cloud Storage, use STORAGE_DRIVER=gcs and set:
+GCS_PROJECT_ID=your-gcp-project-id
+GCS_BUCKET_NAME=your-bucket-name
+# GCS_CREDENTIALS_PATH=/path/to/credentials.json (optional, uses ADC if not set)
 
-# AI Service
-AI_SERVICE_URL=http://localhost:8000
+# RapidAPI - TikTok API (Optional)
+RAPIDAPI_KEY=your-rapidapi-key
+RAPIDAPI_HOST=tiktok-api23.p.rapidapi.com
 
-# TikTok/YouTube API
-TIKTOK_API_KEY=
-YOUTUBE_API_KEY=
+# YouTube Data API v3 (Optional)
+YOUTUBE_API_KEY=your-youtube-api-key
 
-# Add any new required envs below
+# Football/Soccer Data API (Optional)
+FOOTBALL_API_KEY=your-football-api-key
