feat: implement stocks service with database storage and caching
- Added stocks service to fetch company info and fundamentals from SEC API, saving data to the database using Prisma.
- Implemented caching service with Redis for efficient data retrieval and invalidation.
- Created company service to manage company data with caching and invalidation strategies.
- Developed test scripts for Redis and stocks module to ensure functionality.
- Updated worker service to handle stocks sync jobs from RabbitMQ.
- Configured Docker Compose for PostgreSQL, Redis, and RabbitMQ services.
- Documented Railway deployment setup for Redis and other services.
- Added setup script for local development environment with Docker.

--- a/.env.example
+++ b/.env.example
@@ -9,17 +9,11 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 # Database (PostgreSQL)
 DATABASE_URL=postgresql://user:pass@localhost:5432/morpho
 
-# Messaging (RabbitMQ)
-RABBIT_URL=amqp://localhost:5672
+# Redis Caching (Optional, recommended for production)
+# Development: redis://localhost:6379
+# With authentication: redis://:password@host:port
+REDIS_URL=redis://localhost:6379
 
-# Authentication & Security
-JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
-SESSION_SECRET=your-session-secret-minimum-32-characters-long
-API_KEY=optional-api-key-for-external-access
-
-# Storage Configuration
-STORAGE_DRIVER=local
-# For Google Cloud Storage, use STORAGE_DRIVER=gcs and set:
 GCS_PROJECT_ID=your-gcp-project-id
 GCS_BUCKET_NAME=your-bucket-name
 # GCS_CREDENTIALS_PATH=/path/to/credentials.json (optional, uses ADC if not set)
