--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -47,6 +47,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "5.2.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
