--- a/.github/workflows/api-ci-cd.yml
+++ b/.github/workflows/api-ci-cd.yml
@@ -39,9 +39,94 @@ jobs:
       contents: read
       packages: write
 
+    # Services for testing
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_USER: morpho
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: morpho
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        env:
+          RABBITMQ_DEFAULT_USER: guest
+          RABBITMQ_DEFAULT_PASS: guest
+        options: >-
+          --health-cmd "rabbitmq-diagnostics -q ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5672:5672
+          - 15672:15672
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: '10.26.1'
+
+      - name: Setup environment variables
+        run: |
+          cat > apps/api/.env.test << EOF
+          NODE_ENV=test
+          PORT=5001
+          DATABASE_URL=postgresql://morpho:test_password@localhost:5432/morpho
+          REDIS_URL=redis://localhost:6379
+          RABBIT_URL=amqp://localhost
+          JWT_SECRET=test_jwt_secret_key_minimum_32_characters_required
+          SESSION_SECRET=test_session_secret
+          CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+          STORAGE_DRIVER=local
+          EOF
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run database migrations
+        env:
+          DATABASE_URL: postgresql://morpho:test_password@localhost:5432/morpho
+        run: pnpm --filter api exec prisma migrate deploy
+
+      - name: Build API
+        run: pnpm --filter api build
+
+      - name: Run linter
+        run: pnpm --filter api run lint || true
+
+      - name: Run tests
+        env:
+          DATABASE_URL: postgresql://morpho:test_password@localhost:5432/morpho
+          REDIS_URL: redis://localhost:6379
+          JWT_SECRET: test_jwt_secret_key_minimum_32_characters_required
+        run: pnpm --filter api test || true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
